--- a/MVVMaApp/MVVMApp/Base.lproj/Main.storyboard
+++ b/MVVMaApp/MVVMApp/Base.lproj/Main.storyboard
@@ -125,6 +125,9 @@
                                                     <color key="titleShadowColor" red="0.98039215690000003" green="0.98039215690000003" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <imageReference key="image" image="bookmark" catalog="system" symbolScale="large" renderingMode="original"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="addBookToFeatured:" destination="DmF-fX-P8p" eventType="touchUpInside" id="pNa-GJ-F0j"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
