--- a/MVVMaApp/MVVMApp/View/Category Cell/CategoryCollectionViewCell.xib
+++ b/MVVMaApp/MVVMApp/View/Category Cell/CategoryCollectionViewCell.xib
@@ -10,15 +10,15 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CategoryCollectionViewCell" id="gTV-IL-0wX" customClass="CategoryCollectionViewCell" customModule="MVVMApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="100" height="45"/>
+            <rect key="frame" x="0.0" y="0.0" width="120" height="36"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="100" height="45"/>
+                <rect key="frame" x="0.0" y="0.0" width="120" height="36"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4ev-VD-OxP">
-                        <rect key="frame" x="20" y="10" width="60" height="25"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="clip" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4ev-VD-OxP">
+                        <rect key="frame" x="0.0" y="5" width="120" height="26"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -26,15 +26,17 @@
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="4ev-VD-OxP" secondAttribute="bottom" constant="10" id="0iE-mr-s4P"/>
-                <constraint firstAttribute="trailing" secondItem="4ev-VD-OxP" secondAttribute="trailing" constant="20" id="D5g-GV-fN1"/>
-                <constraint firstItem="4ev-VD-OxP" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="LHm-o4-wVA"/>
-                <constraint firstItem="4ev-VD-OxP" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="20" id="hO7-Tg-IZc"/>
+                <constraint firstAttribute="bottom" secondItem="4ev-VD-OxP" secondAttribute="bottom" constant="5" id="0iE-mr-s4P"/>
+                <constraint firstItem="4ev-VD-OxP" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="3Td-yw-8WR"/>
+                <constraint firstItem="4ev-VD-OxP" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="LHm-o4-wVA"/>
+                <constraint firstAttribute="trailing" secondItem="4ev-VD-OxP" secondAttribute="trailing" id="b2X-by-d5n"/>
+                <constraint firstItem="4ev-VD-OxP" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="mge-3n-R3f"/>
             </constraints>
+            <size key="customSize" width="120" height="35"/>
             <connections>
                 <outlet property="categoryLabel" destination="4ev-VD-OxP" id="vWF-Bw-9eC"/>
             </connections>
-            <point key="canvasLocation" x="-68.115942028985515" y="88.727678571428569"/>
+            <point key="canvasLocation" x="-82.608695652173921" y="91.741071428571431"/>
         </collectionViewCell>
     </objects>
 </document>
