--- a/MVVMaApp/MVVMApp/ViewController/BookList/BooksListViewController.xib
+++ b/MVVMaApp/MVVMApp/ViewController/BookList/BooksListViewController.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -10,35 +10,36 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BooksListViewController" customModule="MVVMApp" customModuleProvider="target">
             <connections>
-                <outlet property="booksCollection" destination="iQq-Fk-rtI" id="ad6-ZL-7pg"/>
-                <outlet property="categoryCollection" destination="y7x-Bh-pWM" id="329-Sy-CcY"/>
+                <outlet property="booksCollection" destination="TSX-FG-f9v" id="yLD-gi-tZX"/>
+                <outlet property="categoryCollection" destination="miR-BJ-4H4" id="nbv-iz-Vub"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" restorationIdentifier="Categories" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="y7x-Bh-pWM">
-                    <rect key="frame" x="0.0" y="64" width="414" height="60"/>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="miR-BJ-4H4">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="60" id="LVf-B4-ZAT"/>
+                        <constraint firstAttribute="height" constant="60" id="UdY-r8-csh"/>
                     </constraints>
-                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Z2q-Ru-9Ma">
-                        <size key="itemSize" width="128" height="128"/>
-                        <size key="estimatedItemSize" width="128" height="60"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="odZ-Vo-R5t">
+                        <size key="itemSize" width="128" height="40"/>
+                        <size key="estimatedItemSize" width="128" height="40"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                     </collectionViewFlowLayout>
                 </collectionView>
-                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" restorationIdentifier="BooksCollectionView" dataMode="none" springLoaded="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iQq-Fk-rtI">
-                    <rect key="frame" x="20" y="154" width="374" height="688"/>
-                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="20" minimumInteritemSpacing="20" id="88R-vv-Uqt">
-                        <size key="itemSize" width="128" height="158"/>
-                        <size key="estimatedItemSize" width="128" height="208"/>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" restorationIdentifier="BookCollectionView" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="TSX-FG-f9v">
+                    <rect key="frame" x="16" y="80" width="288" height="468"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="30" minimumInteritemSpacing="30" id="hMj-YK-84D">
+                        <size key="itemSize" width="128" height="187"/>
+                        <size key="estimatedItemSize" width="128" height="187"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -48,15 +49,15 @@
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="iQq-Fk-rtI" secondAttribute="trailing" constant="20" id="1FN-Vy-gjf"/>
-                <constraint firstItem="y7x-Bh-pWM" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="20" id="Jrz-r8-df9"/>
-                <constraint firstItem="iQq-Fk-rtI" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="OYA-qM-bqU"/>
-                <constraint firstItem="iQq-Fk-rtI" firstAttribute="top" secondItem="y7x-Bh-pWM" secondAttribute="bottom" constant="30" id="QTv-1b-sVE"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="iQq-Fk-rtI" secondAttribute="bottom" constant="20" id="opc-wL-EOn"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="y7x-Bh-pWM" secondAttribute="trailing" id="sFd-i7-Bl1"/>
-                <constraint firstItem="y7x-Bh-pWM" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="yk1-f2-Odk"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="miR-BJ-4H4" secondAttribute="trailing" id="4E9-tL-1td"/>
+                <constraint firstItem="TSX-FG-f9v" firstAttribute="top" secondItem="miR-BJ-4H4" secondAttribute="bottom" constant="20" id="7DB-hU-gKw"/>
+                <constraint firstItem="TSX-FG-f9v" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leadingMargin" id="7fN-xa-ftV"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="TSX-FG-f9v" secondAttribute="bottom" constant="20" id="IuC-qY-scN"/>
+                <constraint firstItem="miR-BJ-4H4" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="T5B-KU-N5B"/>
+                <constraint firstItem="TSX-FG-f9v" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Zq0-iT-bfP"/>
+                <constraint firstItem="miR-BJ-4H4" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="xTu-rn-8gR"/>
             </constraints>
-            <point key="canvasLocation" x="100" y="67"/>
+            <point key="canvasLocation" x="-2411.25" y="-29.577464788732396"/>
         </view>
     </objects>
     <resources>
