--- a/Workouts/Workouts/Base.lproj/Main.storyboard
+++ b/Workouts/Workouts/Base.lproj/Main.storyboard
@@ -48,12 +48,152 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="KKw-6o-jeC">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Awu-Nw-XKe"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Awu-Nw-XKe">
+                            <connections>
+                                <segue destination="XGK-4e-zos" kind="show" id="Gzf-r9-3bT"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1047.8260869565217" y="73.660714285714278"/>
+        </scene>
+        <!--Add Workout View Controller-->
+        <scene sceneID="b4z-hv-dYC">
+            <objects>
+                <viewController id="XGK-4e-zos" customClass="AddWorkoutViewController" customModule="Workouts" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="wok-7S-Hkb">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0vw-MS-i1g">
+                                <rect key="frame" x="0.0" y="88" width="414" height="733"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xWr-Zl-WNl">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="733"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Adding workout" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f6A-GA-lBR">
+                                                <rect key="frame" x="20" y="20" width="374" height="24"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bTo-tC-UfW">
+                                                <rect key="frame" x="20" y="64" width="374" height="34"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yLZ-Dg-yBz">
+                                                <rect key="frame" x="20" y="118" width="374" height="34"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Target areas" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fkv-YV-QpJ">
+                                                <rect key="frame" x="20" y="192" width="94.5" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="VH7-RU-146">
+                                                <rect key="frame" x="20" y="233" width="374" height="60"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="60" id="07c-pr-OX9"/>
+                                                </constraints>
+                                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="JoO-MQ-q1l">
+                                                    <size key="itemSize" width="128" height="128"/>
+                                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                                </collectionViewFlowLayout>
+                                                <cells>
+                                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="6e0-Go-8YG">
+                                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="GCO-zY-MgD">
+                                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                            <autoresizingMask key="autoresizingMask"/>
+                                                        </collectionViewCellContentView>
+                                                    </collectionViewCell>
+                                                </cells>
+                                            </collectionView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Exercises" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l4H-gL-3Sv">
+                                                <rect key="frame" x="20" y="333" width="72" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="RS7-lb-rca">
+                                                <rect key="frame" x="20" y="374" width="374" height="260"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                            </tableView>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Of9-Kc-1FB">
+                                                <rect key="frame" x="40" y="684" width="334" height="30"/>
+                                                <state key="normal" title="Button"/>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstItem="bTo-tC-UfW" firstAttribute="leading" secondItem="xWr-Zl-WNl" secondAttribute="leading" constant="20" id="1m5-A3-zFs"/>
+                                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="l4H-gL-3Sv" secondAttribute="trailing" constant="20" symbolic="YES" id="2rS-dD-flj"/>
+                                            <constraint firstItem="Of9-Kc-1FB" firstAttribute="top" secondItem="RS7-lb-rca" secondAttribute="bottom" constant="50" id="DCU-62-VG5"/>
+                                            <constraint firstItem="Fkv-YV-QpJ" firstAttribute="leading" secondItem="xWr-Zl-WNl" secondAttribute="leading" constant="20" id="FHm-Yl-j2m"/>
+                                            <constraint firstAttribute="trailing" secondItem="VH7-RU-146" secondAttribute="trailing" constant="20" id="JTQ-cL-cjQ"/>
+                                            <constraint firstAttribute="trailing" secondItem="f6A-GA-lBR" secondAttribute="trailing" constant="20" id="KdN-CY-61Z"/>
+                                            <constraint firstItem="f6A-GA-lBR" firstAttribute="leading" secondItem="xWr-Zl-WNl" secondAttribute="leading" constant="20" id="Q3D-nY-i3u"/>
+                                            <constraint firstItem="l4H-gL-3Sv" firstAttribute="top" secondItem="VH7-RU-146" secondAttribute="bottom" constant="40" id="TNW-el-e72"/>
+                                            <constraint firstItem="RS7-lb-rca" firstAttribute="top" secondItem="l4H-gL-3Sv" secondAttribute="bottom" constant="20" id="Tqf-rW-C70"/>
+                                            <constraint firstAttribute="bottom" secondItem="Of9-Kc-1FB" secondAttribute="bottom" constant="19" id="Vyk-NO-GO0"/>
+                                            <constraint firstItem="Fkv-YV-QpJ" firstAttribute="top" secondItem="yLZ-Dg-yBz" secondAttribute="bottom" constant="40" id="aZQ-bB-ivy"/>
+                                            <constraint firstItem="VH7-RU-146" firstAttribute="top" secondItem="Fkv-YV-QpJ" secondAttribute="bottom" constant="20" id="dCu-el-WJQ"/>
+                                            <constraint firstAttribute="trailing" secondItem="RS7-lb-rca" secondAttribute="trailing" constant="20" id="g7N-Qq-WJ3"/>
+                                            <constraint firstItem="yLZ-Dg-yBz" firstAttribute="top" secondItem="bTo-tC-UfW" secondAttribute="bottom" constant="20" id="gNA-Fk-Vvz"/>
+                                            <constraint firstAttribute="trailing" secondItem="yLZ-Dg-yBz" secondAttribute="trailing" constant="20" id="iS6-97-Zwo"/>
+                                            <constraint firstItem="bTo-tC-UfW" firstAttribute="top" secondItem="f6A-GA-lBR" secondAttribute="bottom" constant="20" id="kYX-Rq-v27"/>
+                                            <constraint firstItem="VH7-RU-146" firstAttribute="leading" secondItem="xWr-Zl-WNl" secondAttribute="leading" constant="20" id="mGo-NQ-SpD"/>
+                                            <constraint firstAttribute="trailing" secondItem="bTo-tC-UfW" secondAttribute="trailing" constant="20" id="o7j-8R-C52"/>
+                                            <constraint firstItem="yLZ-Dg-yBz" firstAttribute="leading" secondItem="xWr-Zl-WNl" secondAttribute="leading" constant="20" id="uCU-zo-SBW"/>
+                                            <constraint firstItem="l4H-gL-3Sv" firstAttribute="leading" secondItem="xWr-Zl-WNl" secondAttribute="leading" constant="20" id="uW1-Jn-ili"/>
+                                            <constraint firstItem="RS7-lb-rca" firstAttribute="leading" secondItem="xWr-Zl-WNl" secondAttribute="leading" constant="20" id="vcf-fV-Dev"/>
+                                            <constraint firstItem="f6A-GA-lBR" firstAttribute="top" secondItem="xWr-Zl-WNl" secondAttribute="top" constant="20" id="wzj-7E-zzG"/>
+                                            <constraint firstAttribute="trailing" secondItem="Of9-Kc-1FB" secondAttribute="trailing" constant="40" id="z2h-es-Hme"/>
+                                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Fkv-YV-QpJ" secondAttribute="trailing" constant="20" symbolic="YES" id="zSb-MT-JiL"/>
+                                            <constraint firstItem="Of9-Kc-1FB" firstAttribute="leading" secondItem="xWr-Zl-WNl" secondAttribute="leading" constant="40" id="zzu-pI-7NF"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="xWr-Zl-WNl" firstAttribute="leading" secondItem="0vw-MS-i1g" secondAttribute="leading" id="0hQ-gm-q8q"/>
+                                    <constraint firstItem="xWr-Zl-WNl" firstAttribute="centerY" secondItem="0vw-MS-i1g" secondAttribute="centerY" id="DCJ-sP-1UD"/>
+                                    <constraint firstAttribute="bottom" secondItem="xWr-Zl-WNl" secondAttribute="bottom" id="UsY-hS-jX7"/>
+                                    <constraint firstItem="xWr-Zl-WNl" firstAttribute="top" secondItem="0vw-MS-i1g" secondAttribute="top" id="heR-ho-EXm"/>
+                                    <constraint firstAttribute="height" constant="733" id="i55-0M-6gS"/>
+                                    <constraint firstAttribute="trailing" secondItem="xWr-Zl-WNl" secondAttribute="trailing" id="lpG-XA-AEO"/>
+                                    <constraint firstItem="xWr-Zl-WNl" firstAttribute="centerX" secondItem="0vw-MS-i1g" secondAttribute="centerX" id="sBK-Fx-wRJ"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="HDL-EH-YW4"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="HDL-EH-YW4" firstAttribute="trailing" secondItem="0vw-MS-i1g" secondAttribute="trailing" id="Cie-8d-hcM"/>
+                            <constraint firstItem="0vw-MS-i1g" firstAttribute="top" secondItem="HDL-EH-YW4" secondAttribute="top" id="Ssn-TV-Spf"/>
+                            <constraint firstItem="0vw-MS-i1g" firstAttribute="leading" secondItem="HDL-EH-YW4" secondAttribute="leading" id="gld-lu-8Sx"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="IhO-KA-Phh"/>
+                    <connections>
+                        <outlet property="addWorkoutButton" destination="Of9-Kc-1FB" id="e0q-bF-Wkm"/>
+                        <outlet property="descriptionTextField" destination="yLZ-Dg-yBz" id="aak-Oe-WLl"/>
+                        <outlet property="exercisesTableView" destination="RS7-lb-rca" id="hyt-Do-yJa"/>
+                        <outlet property="nameTextField" destination="bTo-tC-UfW" id="1bB-hh-V7P"/>
+                        <outlet property="targetAreasCollection" destination="VH7-RU-146" id="KHH-1t-VIY"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IiD-ix-oRP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1811.594202898551" y="73.660714285714278"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="b5Z-qm-276">
